Fix Grid on the Team section Mobile

--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -7,8 +7,8 @@
 }
 
 .main-container {
-    padding-bottom: 200px;
-    margin-top: 10%;
+    padding-bottom: 80px;
+    margin-top: 40%;
     width: 100%;
     height: 100%;
     background-color: white;
